syntax = "proto3";

package synctv.client;

// ==================== Auth Service ====================
// Authentication: None (public access)
// Routes: /api/auth/*
service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

// ==================== User Service ====================
// Authentication: JWT Authorization header (user_id)
// Routes: /api/user/*
service UserService {
    // Profile Management
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc SetUsername(SetUsernameRequest) returns (SetUsernameResponse);
    rpc SetPassword(SetPasswordRequest) returns (SetPasswordResponse);

    // User's Rooms
    rpc ListCreatedRooms(ListCreatedRoomsRequest) returns (ListCreatedRoomsResponse);
    rpc ListParticipatedRooms(ListParticipatedRoomsRequest) returns (ListParticipatedRoomsResponse);
}

// ==================== Room Service ====================
// Authentication: JWT Authorization header (user_id) + x-room-id metadata (room context)
// Routes: /api/room/*
service RoomService {
    // Room Management (resource-targeted operations)
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
    rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
    rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
    rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse);

    // Room Settings Management
    rpc GetRoomSettings(GetRoomSettingsRequest) returns (GetRoomSettingsResponse);
    rpc UpdateRoomSettings(UpdateRoomSettingsRequest) returns (UpdateRoomSettingsResponse);
    rpc ResetRoomSettings(ResetRoomSettingsRequest) returns (ResetRoomSettingsResponse);

    // Member Management (room-scoped operations, use x-room-id)
    rpc GetRoomMembers(GetRoomMembersRequest) returns (GetRoomMembersResponse);
    rpc UpdateMemberPermissions(UpdateMemberPermissionsRequest) returns (UpdateMemberPermissionsResponse);
    rpc KickMember(KickMemberRequest) returns (KickMemberResponse);
    rpc BanMember(BanMemberRequest) returns (BanMemberResponse);
    rpc UnbanMember(UnbanMemberRequest) returns (UnbanMemberResponse);

    // Real-time Messaging (room-scoped, use x-room-id)
    rpc MessageStream(stream ClientMessage) returns (stream ServerMessage);
    rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);

    // WebRTC ICE Servers Configuration
    rpc GetIceServers(GetIceServersRequest) returns (GetIceServersResponse);

    // WebRTC Network Quality Monitoring
    rpc GetNetworkQuality(GetNetworkQualityRequest) returns (GetNetworkQualityResponse);
}

// ==================== Media Service ====================
// Authentication: JWT Authorization header (user_id) + x-room-id metadata (room context)
// Routes: /api/room/media/*
service MediaService {
    // Playlist Management (room-scoped operations, use x-room-id)
    rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse);
    rpc UpdatePlaylist(UpdatePlaylistRequest) returns (UpdatePlaylistResponse);
    rpc DeletePlaylist(DeletePlaylistRequest) returns (DeletePlaylistResponse);
    rpc ListPlaylists(ListPlaylistsRequest) returns (ListPlaylistsResponse);
    rpc SetCurrentMedia(SetCurrentMediaRequest) returns (SetCurrentMediaResponse);

    // Media Management (room-scoped operations, use x-room-id)
    rpc AddMedia(AddMediaRequest) returns (AddMediaResponse);
    rpc RemoveMedia(RemoveMediaRequest) returns (RemoveMediaResponse);
    rpc ListPlaylist(ListPlaylistRequest) returns (ListPlaylistResponse);
    rpc ListPlaylistItems(ListPlaylistItemsRequest) returns (ListPlaylistItemsResponse); // List dynamic playlist items
    rpc SwapMedia(SwapMediaRequest) returns (SwapMediaResponse);

    // Playback Control (room-scoped operations, use x-room-id)
    rpc Play(PlayRequest) returns (PlayResponse);
    rpc Pause(PauseRequest) returns (PauseResponse);
    rpc Seek(SeekRequest) returns (SeekResponse);
    rpc SetPlaybackSpeed(SetPlaybackSpeedRequest) returns (SetPlaybackSpeedResponse);
    rpc GetPlaybackState(GetPlaybackStateRequest) returns (GetPlaybackStateResponse);

    // Live Streaming (room-scoped, use x-room-id)
    rpc CreatePublishKey(CreatePublishKeyRequest) returns (CreatePublishKeyResponse);

    // Movie Info (room-scoped, use x-room-id)
    rpc GetMovieInfo(GetMovieInfoRequest) returns (GetMovieInfoResponse);
}

// ==================== Public Service ====================
// Authentication: None (public access)
// Routes: /api/public/*
service PublicService {
    rpc CheckRoom(CheckRoomRequest) returns (CheckRoomResponse);
    rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse);
    rpc GetHotRooms(GetHotRoomsRequest) returns (GetHotRoomsResponse);
    rpc GetPublicSettings(GetPublicSettingsRequest) returns (GetPublicSettingsResponse);
}

// ==================== Email Service ====================
// Authentication: None for sending codes, JWT for confirmation
// Routes: /api/email/*
service EmailService {
    // Email verification
    rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse);
    rpc ConfirmEmail(ConfirmEmailRequest) returns (ConfirmEmailResponse);

    // Password reset
    rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
    rpc ConfirmPasswordReset(ConfirmPasswordResetRequest) returns (ConfirmPasswordResetResponse);
}

// Common Types
message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string role = 4;     // Global RBAC role: root, admin, user
    string status = 5;   // Account status: active, pending, banned
    int64 created_at = 6;
    bool email_verified = 7; // Whether email has been verified
}

message Room {
    string id = 1;
    string name = 2;
    string created_by = 3;
    string status = 4; // pending, active, banned
    bytes settings = 5; // JSON settings
    int64 created_at = 6;
    int32 member_count = 7;
    string description = 8; // Room description
    int64 updated_at = 9; // Last updated timestamp
}

message Media {
    string id = 1;
    string room_id = 2;
    string url = 3; // Deprecated: Use source_config instead
    string provider = 4; // bilibili, alist, emby, direct (also known as source_provider)
    string title = 5; // Also known as name
    bytes metadata = 6; // JSON metadata
    int32 position = 7; // Position in playlist
    int64 added_at = 8;
    string added_by = 9; // Also known as creator_id
    string provider_instance_name = 10; // e.g., "bilibili_main", "alist_company"
    bytes source_config = 11; // JSON source config (replaces url for flexibility)
}

message Playlist {
    string id = 1;
    string room_id = 2;
    string name = 3;
    string parent_id = 4; // Parent playlist ID for nested playlists (null for root)
    int32 position = 5; // Position among sibling playlists
    bool is_folder = 6; // True if this is a folder (can contain other playlists)
    bool is_dynamic = 7; // True if this is a dynamic playlist (provider-based)
    int32 item_count = 8; // Number of items in this playlist
    int64 created_at = 9;
    int64 updated_at = 10;
}

message PlaybackState {
    string room_id = 1;
    string playing_media_id = 2;
    double position = 3; // seconds
    double speed = 4;
    bool is_playing = 5;
    int64 updated_at = 6;
    int32 version = 7; // For optimistic locking
}

message RoomMember {
    string room_id = 1;
    string user_id = 2;
    string username = 3;
    string role = 4; // creator, admin, member, guest

    // Effective permissions (calculated from role + added/removed)
    uint64 permissions = 5;

    // Allow/Deny permission pattern fields
    // For member role: uses added_permissions/removed_permissions
    // For admin role: uses admin_added_permissions/admin_removed_permissions
    uint64 added_permissions = 6;
    uint64 removed_permissions = 7;
    uint64 admin_added_permissions = 8;
    uint64 admin_removed_permissions = 9;

    int64 joined_at = 10;
    bool is_online = 11;
}

// Authentication Messages
message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message GetProfileRequest {}

message GetProfileResponse {
    User user = 1;
}

// Room Management Messages
message CreateRoomRequest {
    string name = 1;
    string password = 2; // Optional room password
    bytes settings = 3; // JSON settings
    string description = 4; // Room description
}

message CreateRoomResponse {
    Room room = 1;
}

message GetRoomRequest {
    string room_id = 1;
}

message GetRoomResponse {
    Room room = 1;
    PlaybackState playback_state = 2;
}

message JoinRoomRequest {
    string room_id = 1;
    string password = 2; // Optional room password
}

message JoinRoomResponse {
    Room room = 1;
    PlaybackState playback_state = 2;
    repeated RoomMember members = 3;
}

message LeaveRoomRequest {
    string room_id = 1;
}

message LeaveRoomResponse {
    bool success = 1;
}

message ListRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3; // Optional search by name/description
}

message ListRoomsResponse {
    repeated Room rooms = 1;
    int32 total = 2;
}

message DeleteRoomRequest {
    string room_id = 1;
}

message DeleteRoomResponse {
    bool success = 1;
}

message UpdateRoomSettingsRequest {
    string room_id = 1;
    bytes settings = 2; // JSON settings (partial or complete update)
}

message UpdateRoomSettingsResponse {
    Room room = 1;
}

// Get room settings
message GetRoomSettingsRequest {
    string room_id = 1;
}

message GetRoomSettingsResponse {
    bytes settings = 1; // JSON settings
}

// Reset room settings to default
message ResetRoomSettingsRequest {
    string room_id = 1;
}

message ResetRoomSettingsResponse {
    bytes settings = 1; // Reset settings (default values)
}

// Room Members Messages
// Note: room_id extracted from x-room-id metadata
message GetRoomMembersRequest {}

message GetRoomMembersResponse {
    repeated RoomMember members = 1;
}

message UpdateMemberPermissionsRequest {
    string user_id = 1;           // Target user
    string role = 2;              // New role (optional): creator, admin, member, guest

    // Allow/Deny permission pattern fields
    // Only set the fields you want to update
    // For member role: use added_permissions/removed_permissions
    // For admin role: use admin_added_permissions/admin_removed_permissions
    uint64 added_permissions = 3;
    uint64 removed_permissions = 4;
    uint64 admin_added_permissions = 5;
    uint64 admin_removed_permissions = 6;
}

message UpdateMemberPermissionsResponse {
    RoomMember member = 1;
}

message KickMemberRequest {
    string user_id = 1;  // Target user to kick
}

message KickMemberResponse {
    bool success = 1;
}

message BanMemberRequest {
    string user_id = 1;   // Target user to ban
    string reason = 2;    // Optional ban reason
}

message BanMemberResponse {
    bool success = 1;
}

message UnbanMemberRequest {
    string user_id = 1;  // Target user to unban
}

message UnbanMemberResponse {
    bool success = 1;
}

// Playlist Management Messages
// Note: room_id extracted from x-room-id metadata

message CreatePlaylistRequest {
    string name = 1;
    string parent_id = 2; // Optional parent playlist ID for nested playlists
    bool is_folder = 3; // True if creating a folder (can contain other playlists)
}

message CreatePlaylistResponse {
    Playlist playlist = 1;
}

message UpdatePlaylistRequest {
    string playlist_id = 1;
    string name = 2; // Optional new name
    int32 position = 3; // Optional new position
}

message UpdatePlaylistResponse {
    Playlist playlist = 1;
}

message DeletePlaylistRequest {
    string playlist_id = 1;
}

message DeletePlaylistResponse {
    bool success = 1;
}

message ListPlaylistsRequest {
    string parent_id = 1; // Optional parent ID to get children of specific playlist
}

message ListPlaylistsResponse {
    repeated Playlist playlists = 1;
}

message SetCurrentMediaRequest {
    string playlist_id = 1; // Playlist to play from
    string media_id = 2; // Optional specific media to play (if not specified, starts from first or current position)
}

message SetCurrentMediaResponse {
    Playlist playlist = 1;
    Media playing_media = 2; // The media that is now playing
}

// Media Management Messages
// Note: room_id extracted from x-room-id metadata

message AddMediaRequest {
    string playlist_id = 1; // Target playlist ID
    string url = 2; // Deprecated: Use source_config instead
    string provider = 3; // Optional, provider type name (e.g., "bilibili", "alist")
    string provider_instance_name = 4; // Optional, specific provider instance (e.g., "bilibili_main")
    bytes source_config = 5; // JSON source config (e.g., {"url": "...", "path": "..."})
    string title = 6; // Optional media title
}

message AddMediaResponse {
    Media media = 1;
}

message RemoveMediaRequest {
    string media_id = 1;
}

message RemoveMediaResponse {
    bool success = 1;
}

message ListPlaylistRequest {
    string playlist_id = 1; // Playlist ID to get
    int32 page = 2; // Page number (default 1)
    int32 page_size = 3; // Items per page (default 50)
}

message ListPlaylistResponse {
    Playlist playlist = 1;
    repeated Media media = 2;
    int32 total = 3; // Total number of items in playlist
}

message ListPlaylistItemsRequest {
    string room_id = 1; // Room ID
    string playlist_id = 2; // Playlist ID
    string relative_path = 3; // Relative path within dynamic folder (empty for root)
    int32 page = 4; // Page number (default 0)
    int32 page_size = 5; // Items per page (default 50)
}

message ListPlaylistItemsResponse {
    repeated DirectoryItem items = 1; // Directory items
    int32 total = 2; // Total number of items
}

enum ItemType {
    ITEM_TYPE_UNSPECIFIED = 0;
    ITEM_TYPE_VIDEO = 1; // Video file
    ITEM_TYPE_AUDIO = 2; // Audio file
    ITEM_TYPE_FOLDER = 3; // Folder/directory
    ITEM_TYPE_LIVE = 4; // Live stream
    ITEM_TYPE_FILE = 5; // Other file
}

message DirectoryItem {
    string name = 1; // Item name
    ItemType item_type = 2; // Item type
    string path = 3; // Full path from root
    optional int64 size = 4; // File size in bytes (for files)
    optional string thumbnail = 5; // Thumbnail URL
    optional int64 modified_at = 6; // Modified time (Unix timestamp)
}

message SwapMediaRequest {
    string room_id = 1; // Room ID
    string media_id1 = 2;
    string media_id2 = 3;
}

message SwapMediaResponse {
    bool success = 1;
}

// Playback Control Messages
// Note: room_id extracted from x-room-id metadata
message PlayRequest {}

message PlayResponse {
    PlaybackState playback_state = 1;
}

message PauseRequest {}

message PauseResponse {
    PlaybackState playback_state = 1;
}

message SeekRequest {
    double position = 1; // seconds
}

message SeekResponse {
    PlaybackState playback_state = 1;
}

message SetPlaybackSpeedRequest {
    double speed = 1; // 0.5, 1.0, 1.5, 2.0, etc.
}

message SetPlaybackSpeedResponse {
    PlaybackState playback_state = 1;
}

message GetPlaybackStateRequest {}

message GetPlaybackStateResponse {
    PlaybackState playback_state = 1;
}

// Real-time Messaging
message ClientMessage {
    oneof message {
        ChatMessageSend chat = 1;
        HeartbeatMessage heartbeat = 3;
        // WebRTC signaling messages (P2P and SFU modes)
        WebRTCOffer webrtc_offer = 10;
        WebRTCAnswer webrtc_answer = 11;
        WebRTCIceCandidate webrtc_ice_candidate = 12;
        WebRTCJoin webrtc_join = 13;
        WebRTCLeave webrtc_leave = 14;
    }
}

message ServerMessage {
    oneof message {
        ChatMessageReceive chat = 1;
        PlaybackStateChanged playback_state = 3;
        UserJoinedRoom user_joined = 4;
        UserLeftRoom user_left = 5;
        RoomSettingsChanged room_settings = 6;
        HeartbeatAck heartbeat_ack = 7;
        ErrorMessage error = 8;
        MediaAdded media_added = 9;
        MediaRemoved media_removed = 10;
        PermissionChanged permission_changed = 11;
        PlaylistCreated playlist_created = 12;
        PlaylistUpdated playlist_updated = 13;
        PlaylistDeleted playlist_deleted = 14;
        PlayingChanged playing_changed = 15;
        // WebRTC signaling messages (forwarded from other peers)
        WebRTCOffer webrtc_offer = 20;
        WebRTCAnswer webrtc_answer = 21;
        WebRTCIceCandidate webrtc_ice_candidate = 22;
        WebRTCJoin webrtc_join = 23;
        WebRTCLeave webrtc_leave = 24;
    }
}

// Note: room_id extracted from x-room-id metadata in MessageStream context
// If position is set, client may display this as a danmaku (bullet comment)
message ChatMessageSend {
    string content = 1;
    optional double position = 2; // Video position in seconds (for danmaku display)
    optional string color = 3; // Hex color (e.g., "#FFFFFF") for danmaku
}

message ChatMessageReceive {
    string id = 1;
    string room_id = 2;
    string user_id = 3;
    string username = 4;
    string content = 5;
    int64 timestamp = 6;
    optional double position = 7; // Video position in seconds (for danmaku display)
    optional string color = 8; // Hex color for danmaku
}

message HeartbeatMessage {
    int64 timestamp = 1;
}

message HeartbeatAck {
    int64 timestamp = 1;
}

message PlaybackStateChanged {
    string room_id = 1;
    PlaybackState state = 2;
}

message UserJoinedRoom {
    string room_id = 1;
    RoomMember member = 2;
}

message UserLeftRoom {
    string room_id = 1;
    string user_id = 2;
}

message RoomSettingsChanged {
    string room_id = 1;
    bytes settings = 2; // JSON settings
}

message ErrorMessage {
    string code = 1;
    string message = 2;
}

// Chat History
// Note: room_id extracted from x-room-id metadata
message GetChatHistoryRequest {
    int32 limit = 1; // Max 500
    int64 before = 2; // Timestamp for pagination
}

message GetChatHistoryResponse {
    repeated ChatMessageReceive messages = 1;
}

// User Profile Management
message LogoutRequest {}

message LogoutResponse {
    bool success = 1;
}

message SetUsernameRequest {
    string new_username = 1;
}

message SetUsernameResponse {
    User user = 1;
}

message SetPasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message SetPasswordResponse {
    bool success = 1;
}

message ListCreatedRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListCreatedRoomsResponse {
    repeated Room rooms = 1;
    int32 total = 2;
}

message ListParticipatedRoomsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListParticipatedRoomsResponse {
    repeated RoomWithRole rooms = 1;
    int32 total = 2;
}

message RoomWithRole {
    Room room = 1;
    uint64 permissions = 2; // User's permissions in this room
    string role = 3; // creator, admin, member, guest
}

// Room Discovery
message CheckRoomRequest {
    string room_id = 1;
}

message CheckRoomResponse {
    bool exists = 1;
    bool requires_password = 2;
    string name = 3;
}

message GetHotRoomsRequest {
    int32 limit = 1; // Default 10, max 50
}

message GetHotRoomsResponse {
    repeated RoomWithStats rooms = 1;
}

message RoomWithStats {
    Room room = 1;
    int32 online_count = 2; // Current online users
    int32 total_members = 3;
}

// ==================== Live Streaming ====================

// CreatePublishKey - Generate RTMP publish key for live streaming
// Note: room_id should be extracted from metadata/context by interceptor
// Note: user_id should be extracted from JWT Authorization header
message CreatePublishKeyRequest {
    string id = 1;  // Media ID to publish (matches Go's IDReq pattern)
}

message CreatePublishKeyResponse {
    string publish_key = 1;  // JWT token for RTMP authentication
    string rtmp_url = 2;     // Full RTMP URL (rtmp://host:port/live)
    string stream_key = 3;   // Stream key (room_id/media_id)
    int64 expires_at = 4;    // Token expiration timestamp
}

// ==================== Public Settings ====================

message GetPublicSettingsRequest {}

message GetPublicSettingsResponse {
    bool signup_enabled = 1;
    bool allow_room_creation = 2;
    int64 max_rooms_per_user = 3;
    int64 max_members_per_room = 4;

    // Room settings
    bool disable_create_room = 5;
    bool create_room_need_review = 6;
    int64 room_ttl = 7;
    bool room_must_need_pwd = 8;

    // User settings
    bool signup_need_review = 9;
    bool enable_password_signup = 10;
    bool enable_guest = 18;

    // Proxy settings
    bool movie_proxy = 11;
    bool live_proxy = 12;

    // RTMP settings
    bool rtmp_player = 13;
    bool ts_disguised_as_png = 14;
    string custom_publish_host = 15;

    // Email settings
    bool email_whitelist_enabled = 16;

    // Server settings
    string p2p_zone = 17;
}

// ==================== Email Verification ====================

message SendVerificationEmailRequest {
    string email = 1;
}

message SendVerificationEmailResponse {
    string message = 1;
}

message ConfirmEmailRequest {
    string email = 1;
    string token = 2;  // Verification code from email
}

message ConfirmEmailResponse {
    string message = 1;
    string user_id = 2;
}

// ==================== Password Reset ====================

message RequestPasswordResetRequest {
    string email = 1;
}

message RequestPasswordResetResponse {
    string message = 1;
}

message ConfirmPasswordResetRequest {
    string email = 1;
    string token = 2;       // Reset code from email
    string new_password = 3;
}

message ConfirmPasswordResetResponse {
    string message = 1;
    string user_id = 2;
}

// ==================== Additional Server Messages ====================

message MediaAdded {
    string room_id = 1;
    string media_id = 2;
    string title = 3;
    string added_by = 4; // Username
    string added_by_user_id = 5; // User ID
}

message MediaRemoved {
    string room_id = 1;
    string media_id = 2;
    string removed_by = 4; // Username
    string removed_by_user_id = 5; // User ID
}

message PermissionChanged {
    string room_id = 1;
    string user_id = 2;
    string role = 3; // New role (optional): creator, admin, member, guest

    // All permission fields for full state sync
    uint64 effective_permissions = 4; // Calculated final permissions
    uint64 added_permissions = 5;
    uint64 removed_permissions = 6;
    uint64 admin_added_permissions = 7;
    uint64 admin_removed_permissions = 8;

    string updated_by = 9; // Username of who made the change
}

// ==================== Playlist Events ====================

message PlaylistCreated {
    string room_id = 1;
    Playlist playlist = 2;
}

message PlaylistUpdated {
    string room_id = 1;
    Playlist playlist = 2;
}

message PlaylistDeleted {
    string room_id = 1;
    string playlist_id = 2;
}

message PlayingChanged {
    string room_id = 1;
    Playlist playlist = 2;
    Media playing_media = 3; // Optional: the media that started playing
}

// ==================== WebRTC Signaling Messages ====================

// WebRTC Offer (SDP offer from initiator)
// Client sends this to another specific peer through the server
message WebRTCOffer {
    string to = 1;          // Target: "user_id" or "user_id:conn_id"
    string from = 2;        // Sender: Set by server (防止伪造), format: "user_id:conn_id"
    string data = 3;        // SDP offer (JSON string, opaque to server)
}

// WebRTC Answer (SDP answer from receiver)
// Response to an offer
message WebRTCAnswer {
    string to = 1;          // Target: "user_id" or "user_id:conn_id"
    string from = 2;        // Sender: Set by server (防止伪造), format: "user_id:conn_id"
    string data = 3;        // SDP answer (JSON string, opaque to server)
}

// WebRTC ICE Candidate
// Sent repeatedly during ICE negotiation
message WebRTCIceCandidate {
    string to = 1;          // Target: "user_id" or "user_id:conn_id"
    string from = 2;        // Sender: Set by server (防止伪造), format: "user_id:conn_id"
    string data = 3;        // ICE candidate (JSON string, opaque to server)
}

// WebRTC Join (user joins WebRTC session)
// Broadcast to all users who already joined RTC in the room
message WebRTCJoin {
    string user_id = 1;     // Joiner's user ID
    string conn_id = 2;     // Joiner's connection ID
    string username = 3;    // Joiner's display name (for UI)
}

// WebRTC Leave (user leaves WebRTC session)
// Broadcast to all users in the WebRTC session
message WebRTCLeave {
    string user_id = 1;     // Leaver's user ID
    string conn_id = 2;     // Leaver's connection ID
}

// ICE Servers Configuration
// Server sends this to client upon request or connection
// Contains STUN/TURN server URLs for NAT traversal
message IceServersConfig {
    repeated IceServer servers = 1;
}

message IceServer {
    repeated string urls = 1;     // ["stun:stun.example.com:3478", "turn:turn.example.com:3478"]
    optional string username = 2;  // For TURN authentication
    optional string credential = 3; // For TURN authentication (temporary password)
}

// Request/Response for GetIceServers RPC
message GetIceServersRequest {
    // Empty - uses x-room-id from metadata
}

message GetIceServersResponse {
    repeated IceServer servers = 1;
}

// ==================== Network Quality Monitoring ====================
// Phase 5: Real-time network quality monitoring for WebRTC connections

message GetNetworkQualityRequest {
    // Empty - uses x-room-id from metadata
}

message GetNetworkQualityResponse {
    // Quality stats for each peer in the room
    repeated PeerNetworkQuality peers = 1;
}

message PeerNetworkQuality {
    string peer_id = 1;
    // Round-trip time in milliseconds
    uint32 rtt_ms = 2;
    // Packet loss rate (0.0 - 1.0)
    float packet_loss_rate = 3;
    // Jitter in milliseconds
    uint32 jitter_ms = 4;
    // Available bandwidth in kbps
    uint32 available_bandwidth_kbps = 5;
    // Quality score (0-5, where 5 is excellent)
    uint32 quality_score = 6;
    // Suggested quality action: "none", "reduce_quality", "reduce_framerate", "audio_only"
    string quality_action = 7;
}

// ==================== Movie Info ====================

message GetMovieInfoRequest {
    string media_id = 1;
}

message GetMovieInfoResponse {
    MovieInfo movie = 1;
}

message MovieInfo {
    string type = 1;          // "mpd", "m3u8", "mp4", "flv"
    string url = 2;           // Playback URL (proxy or direct)
    map<string, string> headers = 3; // Required HTTP headers (direct mode)
    repeated MovieSource more_sources = 4;
    repeated MovieSubtitle subtitles = 5;
    bool is_live = 6;
    double duration = 7;
}

message MovieSource {
    string name = 1;          // "HEVC", "4K"
    string type = 2;          // "mpd", "m3u8"
    string url = 3;
    map<string, string> headers = 4;
}

message MovieSubtitle {
    string name = 1;
    string language = 2;
    string url = 3;
    string format = 4;        // "json", "srt", "vtt"
}
