// Room management HTTP handlers
//
// Thin transport layer: delegates all business logic to the impls layer.
// Request and response types are proto-generated structs.

use axum::{
    extract::{Path, Query, State},
    Json,
};

use super::{middleware::AuthUser, AppResult, AppState};
use crate::proto::client::{
    CreateRoomResponse, CreateRoomRequest, GetRoomResponse,
    JoinRoomResponse, JoinRoomRequest, LeaveRoomResponse,
    DeleteRoomResponse,
    AddMediaResponse, AddMediaRequest, RemoveMediaResponse, RemoveMediaRequest,
    ListPlaylistResponse, SwapMediaResponse, SwapMediaRequest,
    PlayResponse, PlayRequest, PauseResponse, SeekResponse, SeekRequest,
    GetPlaybackStateResponse, GetPlaybackStateRequest,
    GetRoomMembersResponse, CheckRoomResponse, ListRoomsResponse, ListRoomsRequest,
    UpdateRoomSettingsRequest, UpdateRoomSettingsResponse,
    ResetRoomSettingsResponse,
    SetRoomPasswordRequest, SetRoomPasswordResponse,
    CheckRoomPasswordRequest, CheckRoomPasswordResponse,
    EditMediaRequest, EditMediaResponse, ClearPlaylistResponse,
    AddMediaBatchRequest, RemoveMediaBatchRequest, RemoveMediaBatchResponse,
    ReorderMediaBatchRequest, ReorderMediaBatchResponse, MediaReorderUpdate,
    GetChatHistoryResponse,
    CreatePlaylistRequest, CreatePlaylistResponse,
    UpdatePlaylistRequest, UpdatePlaylistResponse,
    DeletePlaylistRequest, DeletePlaylistResponse,
    ListPlaylistsResponse,
    SetCurrentMediaRequest, SetCurrentMediaResponse,
    SetPlaybackSpeedRequest, SetPlaybackSpeedResponse,
    GetHotRoomsResponse,
};

// ==================== Room Management Endpoints ====================

/// Create a new room
#[tracing::instrument(name = "http_create_room", skip(state), fields(user_id = %auth.user_id))]
pub async fn create_room(
    auth: AuthUser,
    State(state): State<AppState>,
    Json(req): Json<CreateRoomRequest>,
) -> AppResult<Json<CreateRoomResponse>> {
    tracing::info!(user_id = %auth.user_id, room_name = %req.name, "Creating new room");

    let response = state
        .client_api
        .create_room(&auth.user_id.to_string(), req)
        .await
        .map_err(|e| {
            tracing::error!(user_id = %auth.user_id, error = %e, "Failed to create room");
            super::AppError::internal_server_error(e)
        })?;

    let room_id = response.room.as_ref().map_or("unknown", |r| r.id.as_str());
    tracing::info!(user_id = %auth.user_id, room_id = %room_id, "Room created successfully");
    Ok(Json(response))
}

/// Get room information
pub async fn get_room(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<GetRoomResponse>> {
    let response = state
        .client_api
        .get_room(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Join a room
pub async fn join_room(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<JoinRoomRequest>,
) -> AppResult<Json<JoinRoomResponse>> {
    let response = state
        .client_api
        .join_room(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Leave a room
pub async fn leave_room(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<LeaveRoomResponse>> {
    let response = state
        .client_api
        .leave_room(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Delete a room
#[tracing::instrument(name = "http_delete_room", skip(state), fields(user_id = %auth.user_id, room_id = %room_id))]
pub async fn delete_room(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<DeleteRoomResponse>> {
    tracing::info!(user_id = %auth.user_id, room_id = %room_id, "Deleting room");

    let response = state
        .client_api
        .delete_room(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(|e| {
            tracing::error!(user_id = %auth.user_id, room_id = %room_id, error = %e, "Failed to delete room");
            super::AppError::internal_server_error(e)
        })?;

    tracing::info!(user_id = %auth.user_id, room_id = %room_id, "Room deleted successfully");
    Ok(Json(response))
}

// ==================== Media Management Endpoints ====================

/// Add media to playlist
pub async fn add_media(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<AddMediaRequest>,
) -> AppResult<Json<AddMediaResponse>> {
    let response = state
        .client_api
        .add_media(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Remove media from playlist
pub async fn remove_media(
    auth: AuthUser,
    State(state): State<AppState>,
    Path((room_id, media_id)): Path<(String, String)>,
) -> AppResult<Json<RemoveMediaResponse>> {
    let proto_req = RemoveMediaRequest { media_id: media_id.clone() };
    let response = state
        .client_api
        .remove_media(&auth.user_id.to_string(), &room_id, proto_req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    // Kick active stream for deleted media (local + cluster-wide)
    super::kick_stream_cluster(&state, &room_id, &media_id, "media_deleted");

    Ok(Json(response))
}

/// Bulk remove media from playlist
#[tracing::instrument(name = "http_remove_media_batch", skip(state, req), fields(user_id = %auth.user_id, room_id = %room_id))]
pub async fn remove_media_batch(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<RemoveMediaBatchRequest>,
) -> AppResult<Json<RemoveMediaBatchResponse>> {
    let media_ids_for_kick = req.media_ids.clone();

    let response = state
        .client_api
        .remove_media_batch(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(|e| {
            tracing::error!(user_id = %auth.user_id, room_id = %room_id, error = %e, "Failed to remove media batch");
            super::AppError::internal_server_error(e)
        })?;

    // Kick active streams for deleted media (local + cluster-wide)
    for media_id in &media_ids_for_kick {
        super::kick_stream_cluster(&state, &room_id, media_id, "media_deleted");
    }

    Ok(Json(response))
}

/// Bulk reorder media items in playlist
#[tracing::instrument(name = "http_reorder_media_batch", skip(state, req), fields(user_id = %auth.user_id, room_id = %room_id))]
pub async fn reorder_media_batch(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<ReorderMediaBatchRequest>,
) -> AppResult<Json<ReorderMediaBatchResponse>> {
    let response = state
        .client_api
        .reorder_media_batch(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(|e| {
            tracing::error!(user_id = %auth.user_id, room_id = %room_id, error = %e, "Failed to reorder media batch");
            super::AppError::internal_server_error(e)
        })?;

    Ok(Json(response))
}

/// Get playlist
pub async fn get_playlist(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<ListPlaylistResponse>> {
    let response = state
        .client_api
        .get_playlist(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Swap media items
pub async fn swap_media_items(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<SwapMediaRequest>,
) -> AppResult<Json<SwapMediaResponse>> {
    let response = state
        .client_api
        .swap_media(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Playback Control Endpoints ====================

/// Play (resume playback)
pub async fn play(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<PlayResponse>> {
    let proto_req = PlayRequest {};
    let response = state
        .client_api
        .play(&auth.user_id.to_string(), &room_id, proto_req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Pause playback
pub async fn pause(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<PauseResponse>> {
    let response = state
        .client_api
        .pause(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Seek to position
pub async fn seek(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<SeekRequest>,
) -> AppResult<Json<SeekResponse>> {
    let response = state
        .client_api
        .seek(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Get playback state
pub async fn get_playback_state(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<GetPlaybackStateResponse>> {
    let response = state
        .client_api
        .get_playback_state(&auth.user_id.to_string(), &room_id, GetPlaybackStateRequest {})
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Room Members Endpoints ====================

/// Get room members
pub async fn get_room_members(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<GetRoomMembersResponse>> {
    let response = state
        .client_api
        .get_room_members(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Room Discovery & Public Endpoints ====================

/// Check if room exists (public endpoint)
pub async fn check_room(
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<CheckRoomResponse>> {
    let req = crate::proto::client::CheckRoomRequest { room_id };
    let response = state
        .client_api
        .check_room(req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// List rooms (public endpoint)
pub async fn list_rooms(
    State(state): State<AppState>,
    Query(params): Query<std::collections::HashMap<String, String>>,
) -> AppResult<Json<ListRoomsResponse>> {
    let page: i32 = params.get("page").and_then(|v| v.parse().ok()).unwrap_or(1).max(1);
    let page_size: i32 = params.get("page_size").and_then(|v| v.parse().ok()).unwrap_or(50).clamp(1, 100);
    let search = params.get("search").cloned().unwrap_or_default();

    let proto_req = ListRoomsRequest {
        page,
        page_size,
        search,
    };
    let response = state
        .client_api
        .list_rooms(proto_req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Room Settings Endpoints ====================

/// Set room password
pub async fn set_room_password(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<SetRoomPasswordRequest>,
) -> AppResult<Json<SetRoomPasswordResponse>> {
    let response = state
        .client_api
        .set_room_password(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Check room password (requires authentication to prevent brute force)
pub async fn check_password(
    _auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<CheckRoomPasswordRequest>,
) -> AppResult<Json<CheckRoomPasswordResponse>> {
    let response = state
        .client_api
        .check_room_password(&room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Get room settings (requires authentication)
pub async fn get_room_settings(
    _auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<crate::proto::client::GetRoomSettingsResponse>> {
    let response = state
        .client_api
        .get_room_settings(&room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Push multiple media items to playlist
pub async fn push_media_batch(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<AddMediaBatchRequest>,
) -> AppResult<Json<crate::proto::client::AddMediaBatchResponse>> {
    let response = state
        .client_api
        .add_media_batch(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Edit media
pub async fn edit_media(
    auth: AuthUser,
    State(state): State<AppState>,
    Path((room_id, media_id)): Path<(String, String)>,
    Json(mut req): Json<EditMediaRequest>,
) -> AppResult<Json<EditMediaResponse>> {
    req.media_id = media_id;
    let response = state
        .client_api
        .edit_media(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Clear playlist
pub async fn clear_playlist(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<ClearPlaylistResponse>> {
    let response = state
        .client_api
        .clear_playlist(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// GET /`api/rooms/:room_id/movie/:media_id` - Get movie playback info
pub async fn get_movie_info(
    auth: AuthUser,
    State(state): State<AppState>,
    Path((room_id, media_id)): Path<(String, String)>,
) -> AppResult<Json<crate::proto::client::GetMovieInfoResponse>> {
    let req = crate::proto::client::GetMovieInfoRequest { media_id };
    let resp = state
        .client_api
        .get_movie_info(auth.user_id.as_str(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(resp))
}

// ==================== New RESTful Endpoints ====================

/// Unified handler for listing rooms (with query params) or getting single room by ID
/// GET /api/rooms (list) or GET /api/rooms?id=xxx (single)
pub async fn list_or_get_rooms(
    _auth: Option<AuthUser>,
    State(state): State<AppState>,
    Query(params): Query<std::collections::HashMap<String, String>>,
) -> AppResult<Json<ListRoomsResponse>> {
    // List rooms with optional filtering
    let search = params.get("search").cloned().unwrap_or_default();
    let limit: i32 = params.get("limit").and_then(|s| s.parse().ok()).unwrap_or(50).clamp(1, 100);
    let offset: i32 = params.get("offset").and_then(|s| s.parse().ok()).unwrap_or(0).max(0);

    let request = ListRoomsRequest {
        page: (offset / limit) + 1,
        page_size: limit,
        search,
    };

    let response = state
        .client_api
        .list_rooms(request)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Unified handler for updating room settings via PATCH
/// PATCH /`api/rooms/:room_id/settings`
///
/// PATCH semantics: only specified fields are updated; unspecified fields retain
/// their current values. Current settings are fetched first, then merged.
pub async fn update_room_settings(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<UpdateRoomSettingsRequest>,
) -> AppResult<Json<UpdateRoomSettingsResponse>> {
    let response = state
        .client_api
        .update_room_settings(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// HTTP-specific: Update playback request for PATCH endpoint
/// Dispatches to individual proto operations (play/pause/seek/speed/switch)
#[derive(serde::Deserialize)]
pub struct UpdatePlaybackRequest {
    /// "playing" or "paused"
    #[serde(default)]
    pub state: Option<String>,
    /// Seek position in seconds
    #[serde(default)]
    pub position: Option<f64>,
    /// Playback speed multiplier
    #[serde(default)]
    pub speed: Option<f64>,
    /// Switch to media ID
    #[serde(default)]
    pub media_id: Option<String>,
}

/// Unified handler for updating playback state via PATCH
/// PATCH /`api/rooms/:room_id/playback`
/// Supports: state (play/pause), position (seek), speed, `media_id` (switch)
pub async fn update_playback(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<UpdatePlaybackRequest>,
) -> AppResult<Json<GetPlaybackStateResponse>> {
    let user_id = auth.user_id.to_string();

    // Handle state change (play/pause)
    if let Some(ref state_str) = req.state {
        match state_str.as_str() {
            "playing" => {
                let response = state.client_api
                    .play(&user_id, &room_id, PlayRequest {})
                    .await.map_err(super::AppError::internal_server_error)?;
                return Ok(Json(GetPlaybackStateResponse { playback_state: response.playback_state }));
            }
            "paused" => {
                let response = state.client_api
                    .pause(&user_id, &room_id)
                    .await.map_err(super::AppError::internal_server_error)?;
                return Ok(Json(GetPlaybackStateResponse { playback_state: response.playback_state }));
            }
            _ => return Err(super::AppError::bad_request("Invalid state value, use 'playing' or 'paused'")),
        }
    }

    // Handle position change (seek)
    if let Some(position) = req.position {
        let response = state.client_api
            .seek(&user_id, &room_id, SeekRequest { current_time: position })
            .await.map_err(super::AppError::internal_server_error)?;
        return Ok(Json(GetPlaybackStateResponse { playback_state: response.playback_state }));
    }

    // Handle speed change
    if let Some(speed) = req.speed {
        use crate::proto::client::SetPlaybackSpeedRequest;
        let response = state.client_api
            .set_playback_speed(&user_id, &room_id, SetPlaybackSpeedRequest { speed })
            .await.map_err(super::AppError::internal_server_error)?;
        return Ok(Json(GetPlaybackStateResponse { playback_state: response.playback_state }));
    }

    // Handle media switch
    if let Some(media_id) = req.media_id {
        use crate::proto::client::SetCurrentMediaRequest;
        let _response = state.client_api
            .set_current_media(&user_id, &room_id, SetCurrentMediaRequest {
                playlist_id: String::new(),
                media_id,
            })
            .await.map_err(super::AppError::internal_server_error)?;
        // Return current playback state after media switch
        let pb = state.client_api
            .get_playback_state(&user_id, &room_id, GetPlaybackStateRequest {})
            .await.map_err(super::AppError::internal_server_error)?;
        return Ok(Json(pb));
    }

    Err(super::AppError::bad_request(
        "No valid playback update field provided (state, position, speed, or media_id)"
    ))
}

/// HTTP-specific: Media batch update request for PATCH endpoint
/// Dispatches to reorder or swap proto operations
#[derive(serde::Deserialize)]
pub struct UpdateMediaBatchRequest {
    /// Reorder operations: list of {`media_id`, position}
    #[serde(default)]
    pub reorder: Option<Vec<MediaReorderUpdate>>,
    /// Swap operation: {`media_id1`, `media_id2`}
    #[serde(default)]
    pub swap: Option<SwapMediaRequest>,
}

/// HTTP-specific: batch operation response
#[derive(serde::Serialize)]
pub struct BatchOperationResponse {
    pub success: bool,
}

/// Unified handler for media batch operations via PATCH
/// PATCH /`api/rooms/:room_id/media`
/// Supports: reorder, swap operations
pub async fn update_media_batch(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<UpdateMediaBatchRequest>,
) -> AppResult<Json<BatchOperationResponse>> {
    let user_id = auth.user_id.to_string();

    // Check for reorder operation
    if let Some(updates) = req.reorder {
        let proto_req = ReorderMediaBatchRequest { updates };
        let response = state.client_api
            .reorder_media_batch(&user_id, &room_id, proto_req)
            .await
            .map_err(super::AppError::internal_server_error)?;

        return Ok(Json(BatchOperationResponse { success: response.success }));
    }

    // Check for swap operation
    if let Some(swap_req) = req.swap {
        let response = state.client_api
            .swap_media(&user_id, &room_id, swap_req)
            .await
            .map_err(super::AppError::internal_server_error)?;

        return Ok(Json(BatchOperationResponse { success: response.success }));
    }

    Err(super::AppError::bad_request(
        "No valid batch operation provided (reorder or swap)"
    ))
}

// ==================== Room Settings Reset ====================

/// Reset room settings to defaults
/// POST /`api/rooms/:room_id/settings/reset`
pub async fn reset_room_settings(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
) -> AppResult<Json<ResetRoomSettingsResponse>> {
    let response = state
        .client_api
        .reset_room_settings(&auth.user_id.to_string(), &room_id)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Chat History ====================

/// Get chat history for a room
/// GET /`api/rooms/:room_id/chat/history`
pub async fn get_chat_history(
    _auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Query(params): Query<std::collections::HashMap<String, String>>,
) -> AppResult<Json<GetChatHistoryResponse>> {
    let limit = params.get("limit").and_then(|v| v.parse().ok()).unwrap_or(50i32).clamp(1, 100);
    let before = params.get("before").and_then(|v| v.parse().ok()).unwrap_or(0i64);

    let req = crate::proto::client::GetChatHistoryRequest { limit, before };
    let response = state
        .client_api
        .get_chat_history(&room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Playlist CRUD ====================

/// Create a playlist
/// POST /`api/rooms/:room_id/playlists`
pub async fn create_playlist(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<CreatePlaylistRequest>,
) -> AppResult<Json<CreatePlaylistResponse>> {
    let response = state
        .client_api
        .create_playlist(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Update a playlist
/// PATCH /`api/rooms/:room_id/playlists/:playlist_id`
pub async fn update_playlist(
    auth: AuthUser,
    State(state): State<AppState>,
    Path((room_id, playlist_id)): Path<(String, String)>,
    Json(mut req): Json<UpdatePlaylistRequest>,
) -> AppResult<Json<UpdatePlaylistResponse>> {
    req.playlist_id = playlist_id;
    let response = state
        .client_api
        .update_playlist(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Delete a playlist
/// DELETE /`api/rooms/:room_id/playlists/:playlist_id`
pub async fn delete_playlist(
    auth: AuthUser,
    State(state): State<AppState>,
    Path((room_id, playlist_id)): Path<(String, String)>,
) -> AppResult<Json<DeletePlaylistResponse>> {
    let req = DeletePlaylistRequest { playlist_id };
    let response = state
        .client_api
        .delete_playlist(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// List playlists in a room
/// GET /`api/rooms/:room_id/playlists`
pub async fn list_playlists(
    _auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Query(params): Query<std::collections::HashMap<String, String>>,
) -> AppResult<Json<ListPlaylistsResponse>> {
    let parent_id = params.get("parent_id").cloned().unwrap_or_default();
    let req = crate::proto::client::ListPlaylistsRequest { parent_id };
    let response = state
        .client_api
        .list_playlists(&room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Playback: Set Current Media & Speed ====================

/// Set current media
/// POST /`api/rooms/:room_id/playback/current`
pub async fn set_current_media(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<SetCurrentMediaRequest>,
) -> AppResult<Json<SetCurrentMediaResponse>> {
    let response = state
        .client_api
        .set_current_media(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

/// Set playback speed
/// POST /`api/rooms/:room_id/playback/speed`
pub async fn set_playback_speed(
    auth: AuthUser,
    State(state): State<AppState>,
    Path(room_id): Path<String>,
    Json(req): Json<SetPlaybackSpeedRequest>,
) -> AppResult<Json<SetPlaybackSpeedResponse>> {
    let response = state
        .client_api
        .set_playback_speed(&auth.user_id.to_string(), &room_id, req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}

// ==================== Public: Hot Rooms ====================

/// Get hot rooms (sorted by online count)
/// GET /api/rooms/hot
pub async fn get_hot_rooms(
    State(state): State<AppState>,
    Query(params): Query<std::collections::HashMap<String, String>>,
) -> AppResult<Json<GetHotRoomsResponse>> {
    let limit = params.get("limit").and_then(|v| v.parse().ok()).unwrap_or(10i32).min(50);
    let req = crate::proto::client::GetHotRoomsRequest { limit };
    let response = state
        .client_api
        .get_hot_rooms(req)
        .await
        .map_err(super::AppError::internal_server_error)?;

    Ok(Json(response))
}
